--- a/samples/TextLayoutPropertyExplorer/vc2013/TextLayoutPropertyExplorer.vcxproj
+++ b/samples/TextLayoutPropertyExplorer/vc2013/TextLayoutPropertyExplorer.vcxproj
@@ -103,19 +103,19 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\bluecadet\text\FontManager.cpp" />
+    <ClCompile Include="..\..\..\src\bluecadet\text\StyledTextLayout.cpp" />
+    <ClCompile Include="..\..\..\src\bluecadet\text\StyledTextParser.cpp" />
+    <ClCompile Include="..\..\..\src\bluecadet\text\StyleManager.cpp" />
     <ClCompile Include="..\src\TextLayoutPropertyExplorerApp.cpp" />
-    <ClCompile Include="..\..\..\src\FontManager.cpp" />
-    <ClCompile Include="..\..\..\src\StyledTextLayout.cpp" />
-    <ClCompile Include="..\..\..\src\StyledTextParser.cpp" />
-    <ClCompile Include="..\..\..\src\StyleManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\src\bluecadet\text\FontManager.h" />
+    <ClInclude Include="..\..\..\src\bluecadet\text\StyledTextLayout.h" />
+    <ClInclude Include="..\..\..\src\bluecadet\text\StyledTextParser.h" />
+    <ClInclude Include="..\..\..\src\bluecadet\text\StyleManager.h" />
+    <ClInclude Include="..\..\..\src\bluecadet\text\Text.h" />
     <ClInclude Include="..\include\Resources.h" />
-    <ClInclude Include="..\..\..\src\FontManager.h" />
-    <ClInclude Include="..\..\..\src\StyledTextLayout.h" />
-    <ClInclude Include="..\..\..\src\StyledTextParser.h" />
-    <ClInclude Include="..\..\..\src\StyleManager.h" />
-    <ClInclude Include="..\..\..\src\Text.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
